# houdini-rop-cop-gif

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  ROP_CopGif.C  ROP_CopGif.h
_test/: ropcopgif.hip
_test/backup/: ropcopgif_bak1.hip  ropcopgif_bak2.hip  ropcopgif_bak3.hip  ropcopgif_bak4.hip  ropcopgif_bak5.hip  ropcopgif_bak6.hip  ropcopgif_bak7.hip
